Update README.md and some stuff

--- a/src/ui/ui.html
+++ b/src/ui/ui.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>__name__</title>
+    <title>Plugin</title>
   </head>
   <body>
     <div id="root"></div>
